# modelmora

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  docker-build.yml
api-reference/grpc/: index.html
api-reference/rest/: index.html
api_design/: index.html
architecture/: index.html
contributing/: index.html
data_models/: index.html
data_models/common/error_models/: index.html
data_models/dto/api_models/: index.html
data_models/events/domain_events/: index.html
data_models/inference/batch/: index.html
data_models/inference/inference_job/: index.html
data_models/inference/inference_queue/: index.html
data_models/inference/inference_request/: index.html
data_models/inference/input_data/: index.html
data_models/inference/job_status/: index.html
data_models/inference/output_data/: index.html
data_models/inference/priority/: index.html
data_models/lifecycle/health_status/: index.html
data_models/lifecycle/loaded_model/: index.html
data_models/lifecycle/memory_usage/: index.html
data_models/lifecycle/model_lifecycle_manager/: index.html
data_models/lifecycle/model_process/: index.html
data_models/lifecycle/model_state/: index.html
data_models/observability/log_entry/: index.html
data_models/observability/metric/: index.html
data_models/observability/trace/: index.html
data_models/registry/model_catalog/: index.html
data_models/registry/model_lock/: index.html
data_models/registry/model_version/: index.html
data_models/registry/resource_requirements/: index.html
data_models/registry/task_type/: index.html
deployment/docker/: index.html
deployment/kubernetes/: index.html
design-decisions/: index.html
docs/: contributing.md  design-decisions.md  index.md  modelmora-architecture-plan.md  modelmora-backlog.md  pytest-testing-standards.md  roadmap.md
docs/api-reference/: grpc.md  rest.md
docs/data_models/common/: error_models.md
docs/data_models/dto/: api_models.md
docs/data_models/events/: domain_events.md
docs/data_models/inference/: batch.md  inference_job.md  inference_queue.md  inference_request.md  input_data.md  job_status.md  output_data.md  priority.md
docs/data_models/lifecycle/: health_status.md  loaded_model.md  memory_usage.md  model_lifecycle_manager.md  model_process.md  model_state.md
docs/data_models/observability/: log_entry.md  metric.md  trace.md
docs/data_models/registry/: model_catalog.md  model_lock.md  model_version.md  resource_requirements.md  task_type.md
docs/deployment/: docker.md  kubernetes.md
docs/getting-started/: configuration.md  installation.md  quickstart.md  testing.md
docs/rfc/: #1 - RFC Writting Patterns.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/testing/: index.html
requirements/: index.html
rfc/#1 - RFC Writting Patterns/: index.html
roadmap/: index.html
search/: search_index.json
src/Mmodelmora/: __init__.py
src/Mmodelmora/shared/constants/: bytes_constants.py  power_of_two_constants.py
src/Mmodelmora/shared/custom_types/: big_string.py  medium_string.py  short_string.py
src/ModelMora/: main.py
src/ModelMora/configuration/: __init__.py  app_config.py  base_config.py  connection_config.py  gpu_config.py  kafka_config.py  model_management_config.py  monitoring_config.py  performance_config.py
src/modelmora/registry/domain/: __init__.py  checksum.py  framework_enum.py  locked_model_entry.py  model.py  model_catalog.py  model_catalog_id.py  model_id.py  model_lock.py  model_lock_id.py  model_version.py  model_version_id.py  resource_capacity.py  resource_requirements.py  task_type.py  task_type_enum.py
src/modelmora/registry/domain/events/: __init__.py  model_unregistered.py  model_version_added.py
src/modelmora/registry/domain/exceptions/: invalid_model_exception.py  model_already_exists_exception.py  model_not_found_exception.py  registry_exception_codes.py
src/modelmora/shared/: __init__.py  base_aggregate.py  base_entity.py  base_value.py
src/modelmora/shared/constants/: power_of_two_constants.py
src/modelmora/shared/custom_types/: __init__.py  big_string.py  medium_string.py  natural_number.py  percentage.py  positive_integer.py  short_string.py
src/modelmora/shared/events/: __init__.py  domain_event.py  event_dispatcher.py  event_emitter.py
src/modelmora/shared/identifiers/: __init__.py  event_id.py  string_id.py
tests/unit/Configuration/: test_app_config.py  test_base_config.py  test_connection_config.py  test_gpu_config.py  test_kafka_config.py  test_model_management_config.py  test_monitoring_config.py  test_performance_config.py
tests/unit/modelmora/registry/domain/: test_framework_enum.py  test_locked_model_entry.py  test_model.py  test_model_catalog.py  test_model_catalog_id.py  test_model_id.py  test_model_lock.py  test_model_lock_id.py  test_model_version.py  test_model_version_id.py  test_resource_requirements.py  test_task_type.py  test_task_type_enum.py
tests/unit/modelmora/registry/domain/exceptions/: test_invalid_model_exception.py  test_model_already_exists_exception.py  test_model_not_found_exception.py  test_registry_exception_codes.py
