[project]
name = "ModelMora"
version = "0.1.0"
description = "Neural network model management and inference serving microservice for MiraVeja"
readme = "README.md"
requires-python = "<3.15,>=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {"name" = "Jomar Júnior de Souza Pereira", "email" = "jomarjunior@poli.ufrj.br"}
]
keywords = ["model management", "deep learning", "inference serving", "microservice", "MiraVeja"]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "modelmora", from = "src"}]

[tool.poetry.dependencies]
# Specify the Python version compatibility
python = "<3.15,>=3.10"
# MiraVeja internal packages
miraveja-di = "^0.1.0" # Dependency Injection framework
miraveja-log = {extras = ["fastapi"], version = "^0.1.0"} # Logging utilities
miraveja-authentication = "^0.1" # Authentication and authorization
miraveja-protos = "^0.1.2" # Protobuf definitions for MiraVeja services
# Data validation and settings management using Python type annotations
typing-extensions = "^4.15.0"
# High-performance data structures and data analysis tools
psutil = "^7.1.3"
# PyTorch deep learning framework with CUDA support
torch = {version = "^2.9.0", source = "torch_cuda_13"}
# Computer vision library for PyTorch
torchvision = {version = "^0.24.0", source = "torch_cuda_13"}
# Hugging Face libraries for NLP and diffusion models
transformers = "^4.57.3" # Natural language processing models and tools
sentence-transformers = "^5.1.2" # Sentence embeddings and similarity models
diffusers = "^0.35.2" # Diffusion models for image generation
# gRPC libraries for remote procedure calls
grpcio = "^1.76.0" # gRPC core library
grpcio-tools = "^1.76.0" # gRPC tools for code generation
# Image processing library
pillow = "^12.0.0"
# Web framework for building APIs
fastapi = "^0.123.9"
# ASGI server for serving FastAPI applications
uvicorn = {extras = ["standard"], version = "^0.38.0"}
# Database migration tool
alembic = "^1.17.2"
# SQLAlchemy ORM for database interactions
sqlalchemy = "^2.0.44"
# PostgreSQL database adapter
psycopg2-binary = "^2.9.11"
# Environment variable management
python-dotenv = "^1.2.1"
# Data serialization and validation using Python type annotations
pydantic = "^2.12.5"

# Additional package indexes
[[tool.poetry.source]]
name = "torch_cuda_13"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
# Testing framework with fixture support
pytest = "^8.2.0"
# Async test support for pytest
pytest-asyncio = "^1.3.0"
# Code coverage reporting for pytest
pytest-cov = "^7.0.0"
# gRPC testing utilities
pytest-grpc = "^0.8.0"
# Mocking library for pytest
pytest-mock = "^3.15.1"
# HTTP client for testing FastAPI endpoints
httpx = "^0.28.1"
# Code formatter for consistent style
black = "^25.11.0"
# Import statement sorter
isort = "^7.0.0"
# Python linter for code quality checks
pylint = "^4.0.3"
# Static type checker
mypy = "^1.18.2"
# Git hooks manager for automated checks
pre-commit = "^4.4.0"
# Pylint plugin for pytest compatibility
pylint-pytest = "^1.1.8"
# Pylint plugin for Pydantic model validation
pylint-pydantic = "^0.4.1"
# Protocol Buffers linter
protolint-bin = "^0.56.4"
# gRPC tools for code generation
grpcio-tools = "^1.76.0"

[tool.poetry.group.docs.dependencies]
# Documentation generator
mkdocs = "^1.6.0"
# Material theme for MkDocs
mkdocs-material = "^9.5.0"
# Python API documentation generator
mkdocstrings = {extras = ["python"], version = "^0.26.0"}
# Code highlighting
pymdown-extensions = "^10.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["ModelMora"]

[tool.pylint.master]
ignore = ["tests", "venv", ".venv", "build", "dist", "main.py", "examples/"]
jobs = 0
module-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
attr-naming-style = "snake_case"
argument-naming-style = "snake_case"
variable-naming-style = "snake_case"
load-plugins = ["pylint_pydantic", "pylint_pytest"]
good-names = ["memory_mB"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "C0114", "C0115", "C0116", "R0917", "W0622",
    "R0903", "W0718", "R0801", "E1136", "R0913"
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/modelmora",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU"
]

[tool.coverage.run]
omit = [
    "__init__.py",
    "main.py",
    "**/examples/**",
]
